# mehrkernSS15

./: .gitignore  CMakeLists.txt  README.md  main.c
openmp/: CMakeLists.txt
openmp/src/: async.c  async.h  imagefilter.c  imagefilter.h  main.c
